# cmake-osx

./: .gitignore  CMakeLists.txt  CMakePresets.json  FindLibatrac9.cmake  LICENSE  README.md  main.cpp  vcpkg.json
.github/: pipeline.yml
.github/workflows/: pipeline.yml
modules/: FindLibatrac9.cmake
triplets/: arm64-osx-ci.cmake
